# ndcurves

./: .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .mergify.yml  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  README.md  default.nix  flake.nix  package.xml  pyproject.toml  setup.cfg
.github/workflows/: macos-linux-pip.yml  nix.yml  update-flake-lock.nix  update-flake-lock.yml  windows-conda.yml  windows-pixi.yml
doc/source/: curves.tex
include/NDcurves/: MathDefs.h  bernstein.h  bezier_curve.h  constant_curve.h  cross_implementation.h  cubic_hermite_spline.h  curve_abc.h  curve_constraint.h  curve_conversion.h  exact_cubic.h  fwd.h  linear_variable.h  piecewise_curve.h  polynomial.h  quadratic_variable.h  se3_curve.h  sinusoidal.h  so3_linear.h
include/NDcurves/helpers/: effector_spline.h  effector_spline_rotation.h
include/NDcurves/optimization/: definitions.h  details.h  integral_cost.h  quadratic_problem.h
include/curve/: CMakeLists.txt  MathDefs.h  bernstein.h  bezier_curve.h  bezier_polynom_conversion.h  cubic_spline.h  curve_abc.h  curve_constraint.h  exact_cubic.h  linear_variable.h  quintic_spline.h  spline_deriv_constraint.h
include/curves/: .nfs00000000012611f60000004d  CMakeLists.txt  MathDefs.h  bernstein.h  bezier_curve.h  bezier_polynom_conversion.h  bezier_polynomial_conversion.h  constant_curve.h  cross_implementation.h  cubic_hermite_spline.h  cubic_spline.h  curve_abc.h  curve_constraint.h  curve_conversion.h  exact_cubic.h  fwd.h  linear_variable.h  piecewise_curve.h  piecewise_polynomial_curve.h  polynom.h  polynomial.h  quadratic_variable.h  quintic_spline.h  se3_curve.h  serialize_test_class.h  sinusoidal.h  so3_linear.h  spline_deriv_constraint.h
include/curves/helpers/: CMakeLists.txt  effector_spline.h  effector_spline_rotation.h
include/curves/optimization/: CMakeLists.txt  OptimizeSpline.h  definitions.h  details.h  integral_cost.h  quadratic_problem.h
include/curves/proto/: CMakeLists.txt  Curves_proto.pb.cc  Curves_proto.pb.h  Curves_proto.proto
include/curves/python/: CMakeLists.txt  python_definitions.h
include/curves/serialization/: CMakeLists.txt  archive.hpp  curves.hpp  eigen-matrix.hpp  fwd.hpp  registeration.h  registeration.hpp
include/hpp/spline/: CMakeLists.txt  bernstein.h  bezier_curve.h  exact_cubic.h  linear_variable.h  polynom.h  spline_deriv_constraint.h
include/hpp/spline/helpers/: CMakeLists.txt  effector_spline.h  effector_spline_rotation.h
include/nd_curves/: MathDefs.h  bernstein.h  bezier_curve.h  constant_curve.h  cross_implementation.h  cubic_hermite_spline.h  curve_abc.h  curve_constraint.h  curve_conversion.h  exact_cubic.h  fwd.h  linear_variable.h  piecewise_curve.h  polynomial.h  quadratic_variable.h  se3_curve.h  sinusoidal.h  so3_linear.h
include/ndcurves/: MathDefs.h  bernstein.h  bezier_curve.h  constant_curve.h  cross_implementation.h  cubic_hermite_spline.h  curve_abc.h  curve_constraint.h  curve_conversion.h  exact_cubic.h  fwd.h  linear_variable.h  piecewise_curve.h  polynomial.h  polynomial_1d.h  quadratic_variable.h  se3_curve.h  sinusoidal.h  so3_linear.h  so3_smooth.h
include/spline/: BezierCurve.h  CubicFunction.h  Curve_ABC.h  ExactCubic.h  MathDefs.h  bernstein.h  bezier_curve.h  bezier_polynom_conversion.h  cubic_function.h  cubic_spline.h  cubic_zero_vel_acc.h  curve_abc.h  curve_constraint.h  exact_cubic.h  exact_cubic_vel_acc_cons.h  polynom.h  quintic_spline.h  spline_curve.h  spline_deriv_constraint.h
python/: CMakeLists.txt  archive_python_binding.h  curve_python.cpp  curves_python.cpp  namespace.cpp  namespace.h  optimization_python.cpp  optimization_python.h  python_definitions.h  python_variables.cpp  python_variables.h  spline_python.cpp
python/NDcurves/: __init__.py  archive_python_binding.h  curves_python.cpp  namespace.cpp  namespace.h  optimization.py  optimization_python.cpp  optimization_python.h  plot.py  python_variables.cpp  python_variables.h
python/curves/: CMakeLists.txt  __init__.py  curves_python.cpp  namespace.cpp  namespace.h  optimization.py  optimization_python.cpp  optimization_python.h  plot.py  python_definitions.h  python_variables.cpp  python_variables.h  registration.h
python/deploy/: __init__.py
python/deploy/optimization/: __init__.py
python/nd_curves/: __init__.py  archive_python_binding.h  curves_python.cpp  namespace.cpp  namespace.h  optimization.py  optimization_python.cpp  optimization_python.h  plot.py  python_variables.cpp  python_variables.h
python/ndcurves/: CMakeLists.txt  __init__.py  archive_python_binding.h  curves_python.cpp  namespace.cpp  namespace.h  optimization.py  optimization_python.cpp  optimization_python.h  plot.py  python_variables.cpp  python_variables.h
python/plot/: plot.py
python/test/: notebook.py  optimization.py  registration.py  test-constant.py  test-curve-constraints.py  test-minjerk.py  test-sinusoidal.py  test.py  test_optimization.py
python/test/sandbox/: fit.py  plot_bezier.py  qp.py  test.ipynb  test_var.py  varBezier.py
python/test/sandbox/qp_traj/: convex_hull.py  plot_cord.py  qp.py  qp_cord.py  test_cord.py  varBezier.py
python/test/variable/: test_var.py  varBezier.py
python/test/variable/qp_traj/: convex_hull.py  plot_cord.py  qp.py  qp_cord.py  test_cord.py  varBezier.py
src/spline/: BezierCurve.cpp  CMakeLists.txt  CubicFunction.cpp  ExactCubic.cpp
tests/: CMakeLists.txt  Main.cpp  load_problem.h  test-constant.cpp  test-curve-constraints.cpp  test-minjerk.cpp  test-operations.cpp  test-polynomial.cpp  test-se3.cpp  test-sinusoidal-serialization.cpp  test-sinusoidal.cpp  test-so3-smooth.cpp
tests/data/: discrete_points_acc.txt  discrete_points_pos.txt  discrete_points_vel.txt  test.pb
unittest/: CMakeLists.txt  Main.cpp  load_problem.h  test_minjerk.cpp
unittest/bindings/: CMakeLists.txt  test_constraints.py  test_registration.py
unittest/bindings/sandbox/: fit.py  test.ipynb
unittest/bindings/sandbox/qp_traj/: plot_cord.py  qp.py  qp_cord.py
unittest/data/: discrete_points_acc.txt  discrete_points_error.txt  test.pb
(+57 files in other folders)
